tests/policies/ingress_https.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ingress-https
  annotations:
    policies.kyverno.io/title: Require Ingress HTTPS
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.9.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      Ingress resources should only allow secure traffic so they need to
      specify TLS in the spec.
spec:
  background: true
  validationFailureAction: audit
  rules:
  - name: has-tls
    match:
      any:
      - resources:
          kinds:
          - Ingress
    preconditions:
      all:
      - key: "{{request.operation || 'BACKGROUND'}}"
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      message: "TLS must be defined."
      deny:
        conditions:
          all:
          - key: tls
            operator: AnyNotIn
            value: "{{ request.object.spec.keys(@) }}"
